# maxwell

./: .gitignore  draw.js  embed_test.html  fieldline.js  gaussian_surface.js  index.html  intersection.js  ui.js  winding.js
maxwell/: Cargo.toml
maxwell/src/: contours.rs  evolution.rs  fourier.rs  geometry.rs  lib.rs  pml.rs  stencil.rs
