[package]
name = "maxwell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ['console'] }
ndarray = "0.15"
# easyfft = "0.4"
num-complex = "0.4"
fft2d = "0.1"
num = "0.4"


[lib]
crate-type = ["cdylib"]
